# AgriChain

./: .gitignore  README.md  package-lock.json  package.json  render.yaml
anchor/: README.md
backend/: .env.example  manage.py  requirements.txt
backend/accounts/: admin.py  models.py  serializers.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/farmtrace_backend/: asgi.py  settings.py  urls.py  wsgi.py
backend/products/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/products/migrations/: 0001_initial.py  0002_product_ai_confidence_product_ai_status_and_more.py  0003_remove_product_farmer_product_farmer_wallet.py
backend/wallet/: auth.py  models.py  serializers.py  urls.py  views.py
backend/wallet/migrations/: 0001_initial.py  0002_walletprofile_farmerverification.py  0003_replace_farm_image_url_with_upload.py
frontend/: .env.development  .env.example  .env.production.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/scripts/: verify-supabase-health.mjs
frontend/src/: App.jsx  index.css  main.jsx  nodePolyfills.js
frontend/src/components/: BrandLogo.jsx  Button.jsx  BuyerPageScaffold.jsx  BuyerSidebar.jsx  Card.jsx  ErrorBoundary.jsx  Footer.jsx  Loader.jsx  (+8 more)
programs/agrichain_proof_program/: lib.rs
solana/: Anchor.toml  Cargo.toml  README.md  package.json
solana/programs/agrichain_proof_program/: Cargo.toml
solana/programs/agrichain_proof_program/src/: lib.rs
supabase/migrations/: 20250509120000_agrichain_mvp.sql  20250509120001_api_grants_mvp.sql
(+60 files in other folders)
